abstract and introduction review part 1

--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -74,8 +74,8 @@
 \abstract{
 In this work we study computational complexity of problems related to elections.
 We are interested in problems of detecting whether
-some subsets of candidates are indistinguishable or hardly distinguishable for voters.
-We call such candidates clones and imperfect clones respectively.
+some subsets of candidates are either indistinguishable or hardly distinguishable for voters.
+We call such candidates clones and imperfect clones, respectively.
 We conclude that detecting clones is in \textsc{P}
 and detecting imperfect clones is \textsc{NP}-complete for some measures.
 }
