--- a/introduction.tex
+++ b/introduction.tex
@@ -3,36 +3,39 @@ Elections is a situation when a set of voters collaboratively chooses one or man
 
 \section{Attacking Elections with Clones}
 
-Let us imagine a single-round presidential elections.
-According to sounding there are two considerable candidates: $A$ and $B$.
+Let us imagine a single-round presidential election.
+According to preelection polls there are two serious candidates: $A$ and $B$.
 Candidate $B$ is given lesser chances of winning.
 However, he exploits the fact that $A$ has a twin brother $C$.
-He manages to persuade him to take part in elections.
-When it comes to the elections confused supporters of $A$ do not know on whom they should vote.
-Their votes are being split between $A$ and $C$.
+He manages to persuade the twin brother to take part in the election.
+When it comes to the election, confused supporters of $A$ do not know who they should vote for.
+Their votes end up split between $A$ and $C$.
 Candidate $B$ wins the elections and becomes the president.
 
-This is a particular case of attack called \textit{strategic candidacy problem} or \textit{control by adding candidates}
-depending on the executor.
-We are interested in variant where new candidate is very similar to an existing one.
+This is a particular case of an attack known as \textit{strategic candidacy} or \textit{control by adding candidates},
+depending on the person performing the attack.
+We are interested in the variant where the new candidates are very similar to some of the existing ones.
 So similar, that he or she is indistinguishable or hardly distinguishable for voters.
 
 % move to the beginning
-Our goal in this paper is to conceive methods of defending against attacking elections with clones.
-We are interested in stating whether such an attack took place.
-Given voters preferences, regardless of election system, we want to detect latent clone structures.
+Our goal in this work is to conceive methods of defending against such clone-based attacks.
+We are interested in figuring out whether such an attack took place, or, at least, likely took place.
+Given voters preferences, regardless of the election system used, we want to detect latent clone structures.
 
 \section{Related Works}
 
 
-\section{The Structure of the Thesis}
+\section{Structure of the Thesis}
 
 % list. highlight own work.
 
 This thesis has the following structure.
-Chapter 2 presents briefly basic mathematical and computational scientific concepts and facts to be used later.
-Chapter 3 includes formal definitions of elections, introduces decloning problem and shows polynomial-time algorithm for it.
-Chapter 4 contains study of imperfect clone structures:
-it discusses error function for clone set families and optimal non-perfect decloning problem.
-For a sample error function we prove that optimal decloning is \textit{NP}-complete.
-Finally, chapter 5 summarizes thesis results, gives real-life consequences and indicates opportunities for further works.
+In Chapter 2 we briefly present concepts from computer science
+and mathematics that form the basis of our arguments.
+In Chapter we include formal definitions of elections, introduces the decloning problem
+and shows a polynomial-time algorithm for it.
+Chapter 4 contains study of imperfect clone structures.
+It discusses error functions for clone set families and the optimal non-perfect decloning problem.
+For a sample error function we prove that optimal decloning is \np-complete.
+Finally, Chapter 5 summarizes our results, discusses real-life consequences,
+and indicates opportunities for further research.
