--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -17,8 +17,8 @@ Table \ref{symbols} presents symbol that we use in this work.
 	$\mathbb{N}_+$	& positive natural numbers \\ \hline
 	$\mathbb{R}$	& real numbers \\ \hline
 	$\mathbb{P}$	& prime numbers \\ \hline
-	$\sum$			& sum \\ \hline 
-	$\bigcup$		& set sum of elements\\ \hline
+	$\sum$	& sum \\ \hline 
+	$\bigcup \cdot$	& union of elements of set\\ \hline
 	$\abs{\cdot}$	& set cardinality \\ \hline
 	$2^\cdot$		& family of subsets \\ \hline
 	$f''$			& second derivative of function $f$ \\ \hline
