--- a/introduction.tex
+++ b/introduction.tex
@@ -15,9 +15,9 @@ Candidate $B$ wins the elections and becomes the president.
 This is a particular case of an attack known as \textit{strategic candidacy} or \textit{control by adding candidates},
 depending on the person performing the attack.
 We are interested in the variant where the new candidates are very similar to some of the existing ones.
-So similar, that he or she is indistinguishable or hardly distinguishable for voters.
+So similar, that they are indistinguishable or hardly distinguishable for voters.
+We call such candidates clones.
 
-% move to the beginning
 Our goal in this work is to conceive methods of defending against such clone-based attacks.
 We are interested in figuring out whether such an attack took place, or, at least, likely took place.
 Given voters preferences, regardless of the election system used, we want to detect latent clone structures.
@@ -26,8 +26,6 @@ Given voters preferences, regardless of the election system used, we want to det
 
 
 \section{Structure of the Thesis}
-
-% list. highlight own work.
 
 This thesis has the following structure.
 In Chapter 2 we briefly present concepts from computer science
