two articles more in bibliography

--- a/bib.bib
+++ b/bib.bib
@@ -42,3 +42,17 @@
     publisher = "Pearson",
     year    = "2012",
 }
+
+@article{karamata,
+    author = "Zoran Kadelburg and Dušan Dukić and Milivoje Lukić and Ivan Matić",
+    title = "Inequalities of Karamata, Schur and Muirhead, and Some Applications",
+    year = "2005",
+    journal = "The Teaching of Mathematics",
+    volume = "8",
+}
+
+@article{bertrand,
+    author = "David Galvin",
+    title = "Erdős's proof of Bertrand's postulate",
+    year = "2006",
+}
