--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -66,6 +66,7 @@ such that for every $a \in X$ there is exactly one $Y \in F$ such that $a \in Y$
 \end{defn}
 
 Let us now revise some notions from graph theory.
+More background is described in \cite{graphtheory}.
 
 \begin{defn}[graph]
 A graph $G$ is an ordered pair $(V,E)$ of set $V$ of vertices and a set $E$ of edges.
@@ -101,6 +102,8 @@ This theorem states that prime number are dense.
 \begin{thm}[Bertrand–Chebyshev] \label{bertrand-chebyshev}
 For any integer $n>1$ there exists $p \in \mathbb{P}$ such that $n < p < 2n$.
 \end{thm}
+
+Its proof can be found in \cite{bertrand}.
 
 This is a useful property of prime numbers.
 
@@ -149,11 +152,14 @@ and $(a_1, ..., a_n) \neq (b_1, ..., b_n)$, then
 $\sum_{i=1}^n f(a_i) > \sum_{i=1}^n f(b_i)$.
 \end{thm}
 
+Proof of the equality can be found in \cite{karamata}.
 
 \section{Complexity Theory}
 
 We will not give a full introduction to computational complexity theory here,
 but instead, we will revise the most important notions.
+Textbooks \cite{compcomplexity} and \cite{computersandintractability}
+contain more complete and more formal description of the topic. %TODO: fix ref
 
 We model algorithms through \textit{Turing machine}.
 Computation is an execution of Turing machine on a given input.
